k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopkart
  labels:
    app.kubernetes.io/name: shopkart
    app.kubernetes.io/part-of: shopkart
