k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopkart-ingress
  namespace: shopkart
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: shopkart.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shopkart-backend
                port:
                  number: 5000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: shopkart-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopkart-frontend
                port:
                  number: 80
